--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,25 +9,8 @@ set(EVENT__DISABLE_TESTS ON CACHE BOOL "Disable libevent tests")
 set(EVENT__DISABLE_BENCHMARK ON CACHE BOOL "Disable libevent benchmarks")
 set(EVENT__DISABLE_REGRESS ON CACHE BOOL "Disable libevent regress tests")
 
-add_subdirectory(libevent)
-
-set(SOURCES 
-    src/main.c
-    src/logger.c
-    src/threadpool.c
-    src/udp_server.c
-    src/tracker_logic.c
-    src/hashmap.c
-    src/http_server.c
-)
+add_subdirectory(external)
+add_subdirectory(src)
 
 
-find_package(Threads REQUIRED)
-find_package(PostgreSQL REQUIRED)
 
-add_executable(traker ${SOURCES})
-
-
-target_link_libraries(traker PRIVATE Threads::Threads event_extra PostgreSQL::PostgreSQL)
-
-target_include_directories(traker PRIVATE ${PROJECT_SOURCE_DIR}/src ${LIBEVENT_INCLUDE_DIR})
